--- a/polygon-django/templates/admin.html
+++ b/polygon-django/templates/admin.html
@@ -18,25 +18,21 @@
             <li><a href="/logout">🚪Выйти</a></li>
         </ul>
     </div>
-    <div class="content">
-        <table class="tasks">
-          {% for row in tasks %}
-            <tr>
-              {% for task in row %}
-                <td>
-                  <div class="task">
-                    <h2 class="task-title">{{ task.title }}</h2>
-                    {% if task.admin_html %}
-                      {{ task.admin_html|safe }}
-                    {% else %}
-                      <span>По данному таску нет администрационных функций</span>
-                    {% endif %}
-                  </div>
-                </td>
-              {% endfor %}
-            </tr>
-          {% endfor %}
-        </table>
+    <div class="content" align="center">
+      <div class="new-tasks">
+        {% for task in tasks %}
+          <div class="new-task">
+            <div class="task-content">
+              <h2 class="task-title">{{ task.title }}</h2>
+              {% if task.admin_html %}
+                {{ task.admin_html|safe }}
+              {% else %}
+                <span>По данному таску нет администрационных функций</span>
+              {% endif %}
+            </div>
+          </div>
+        {% endfor %}
+      </div>
     </div>
 </body>
 </html>
