--- a/polygon-django/templates/signin.html
+++ b/polygon-django/templates/signin.html
@@ -21,7 +21,7 @@
         {% endif %}
         <form action="/signin/" method="post">
             {% csrf_token %}
-            <div class="container">
+            <div class="container" align="center">
                 <p>Введите данные</p>
                 <hr>
 
